# alpaca-trading-bot

./: .gitignore  .replit  main.py  pyproject.toml  requirements.txt  trade_log.csv
templates/: index.html
